# oneApiPassBufferToFunction

./: CMakeLists.txt  License.txt  README.md  sample.json
src/: CMakeLists.txt  main.cpp
